--- a/accessibility/fix-a11y/04-index.html
+++ b/accessibility/fix-a11y/04-index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta charset="UTF-8">
     <title>Homepage - A fake website</title>
+    <style>
+    </style>
   </head>
   <body>
     <div class="header">
@@ -32,7 +34,7 @@
             <h1>Philip Gilbert</h1>
             <div>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</div><a class="primary-btn" href="#">discover now</a>
           </div>
-          <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=" "></div>
+          <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
         </div>
       </div>
     </div>
@@ -171,4 +173,3 @@
     </div>
   </body>
 </html>
-
