--- a/accessibility/fix-a11y/05-index.html
+++ b/accessibility/fix-a11y/05-index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta charset="UTF-8">
     <title>Homepage - A fake website</title>
+    <style>
+    </style>
   </head>
   <body>
     <div class="header">
@@ -32,7 +34,7 @@
             <h1>Philip Gilbert</h1>
             <div>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</div><a class="primary-btn" href="#">discover now</a>
           </div>
-          <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=" "></div>
+          <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
         </div>
       </div>
     </div>
@@ -153,8 +155,8 @@
               <p>Stay updated with our latest trends</p>
               <form action="#" method="post">
                 <div class="input-group">
-                    <label for="email" class="visually-hidden"></label>
-                  <input class="form-control" type="email" name="email" id="email" autocomplete="email" required>
+                  <label class="visually-hidden" for="email"></label>
+                  <input class="form-control" type="email" name="email"autocomplete="email" required aria-required="true" id="email">
                   <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
@@ -172,4 +174,3 @@
     </div>
   </body>
 </html>
-
