--- a/accessibility/fix-a11y/08-index.html
+++ b/accessibility/fix-a11y/08-index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Homepage - A fake website</title>
+    <style>
+    </style>
   </head>
   <body>
     <div class="header">
@@ -33,7 +35,7 @@
             <span>Philip Gilbert</span>
             <div>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</div><a class="primary-btn" href="#">discover now</a>
           </div>
-          <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=" "></div>
+          <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
         </div>
       </div>
     </div>
@@ -118,7 +120,7 @@
         <div class="row">
           <div class="col-8">
             <div class="title text-center">
-              <span>Choose Your Plan</span>
+              <h2>Choose Your Plan</h2>
               <p>When someone does something that they know that they shouldn’t do, did they.</p>
             </div>
           </div>
@@ -154,8 +156,8 @@
               <p>Stay updated with our latest trends</p>
               <form action="#" method="post">
                 <div class="input-group">
-                    <label for="email" class="visually-hidden"></label>
-                  <input class="form-control" type="email" name="email" id="email" autocomplete="email" required>
+                  <label class="visually-hidden" for="email"></label>
+                  <input class="form-control" type="email" name="email"autocomplete="email" required aria-required="true" id="email">
                   <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
@@ -165,10 +167,7 @@
             <div class="footer-widget">
               <span>Follow Me</span>
               <p>Let us be social</p>
-                <div>
-                    <a href="#" aria-label="Facebook"><i class="facebook-icon"></i></a>
-                    <a href="#" aria-label="Instagram"><i class="twitter-icon"></i></a>
-                </div>
+              <div><a href="#" aria-label="Facebook"><i class="facebook-icon"></i></a><a href="#" aria-label="Twitter"><i class="twitter-icon"></i></a></div>
             </div>
           </div>
         </div>
@@ -176,4 +175,3 @@
     </div>
   </body>
 </html>
-
