--- a/sudo/fix-a11y/05-index.html
+++ b/sudo/fix-a11y/05-index.html
@@ -4,8 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta charset="UTF-8">
     <title>Homepage - A fake website</title>
-    <style>
-    </style>
   </head>
   <body>
     <div class="header">
@@ -34,7 +32,7 @@
             <h1>Philip Gilbert</h1>
             <div>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</div><a class="primary-btn" href="#">discover now</a>
           </div>
-          <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
+          <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=" "></div>
         </div>
       </div>
     </div>
@@ -155,8 +153,8 @@
               <p>Stay updated with our latest trends</p>
               <form action="#" method="post">
                 <div class="input-group">
-                  <label class="visually-hidden" for="email"></label>
-                  <input class="form-control" type="email" name="email"autocomplete="email" required aria-required="true" id="email">
+                    <label for="email" class="visually-hidden"></label>
+                  <input class="form-control" type="email" name="email" id="email" autocomplete="email" required>
                   <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
@@ -166,7 +164,7 @@
             <div class="footer-widget">
               <h4>Follow Me</h4>
               <p>Let us be social</p>
-              <div><a href="#" aria-label="Facebook"><i class="facebook-icon"></i></a><a href="#" aria-label="Twitter"><i class="twitter-icon"></i></a></div>
+              <div><a href="#"><i class="facebook-icon"></i></a><a href="#"><i class="twitter-icon"></i></a></div>
             </div>
           </div>
         </div>
@@ -174,3 +172,4 @@
     </div>
   </body>
 </html>
+
