--- a/sudo/skip-links/01-index.html
+++ b/sudo/skip-links/01-index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Homepage - Techium</title>
     <meta name="description" content="Description of the page less than 150 characters">
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    <link rel="icon" type="image/png" href="../images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="01-styles.css">
   </head>
@@ -14,21 +14,18 @@
     <!-- Skip links -->
      <nav aria-label="Skip links">
         <ul class="off-screen">
-            <li>
-                <a href="#a11y-primary-nav" class="skip-link">Skip to primary navigation</a>
-            </li>
-            <li>
-                <a href="#a11y-main-content" class="skip-link">Skip to main content</a>
-            </li>
+            <li ><a href="#a11y-primary-nav" class="skip-link"></a>Skip to primary navigation</li>
+            <li ><a href="#a11y-main-content" class="skip-link"></a>Skip to main content</li>
+            
         </ul>
+
      </nav>
-    <!– Header –>
     <header class="header" data-section-theme="dark">
       <div class="container">
         <div class="header-container">
           <div class="header-logo">
             <a href="/">
-              <img src="../images/logo-white.png" alt="Techium logo" width="160" height="40">
+              <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
             </a>
           </div>
           <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -146,7 +143,7 @@
                 <article class="card-work">
                   <div class="card-outer">
                     <div class="card-image">
-                      <img src="../images/pic-work-01.jpg" alt="">
+                      <img src="images/pic-work-01.jpg" alt="">
                     </div>
                     <div class="card-inner">
                       <h3 class="card-title"><a href="#">Interior Design</a></h3>
@@ -158,7 +155,7 @@
                 <article class="card-work">
                   <div class="card-outer">
                     <div class="card-image">
-                      <img src="../images/pic-work-02.jpg" alt="">
+                      <img src="images/pic-work-02.jpg" alt="">
                     </div>
                     <div class="card-inner">
                       <h3 class="card-title"><a href="#">Web Development</a></h3>
@@ -170,7 +167,7 @@
                 <article class="card-work">
                   <div class="card-outer">
                     <div class="card-image">
-                      <img src="../images/pic-work-03.jpg" alt="">
+                      <img src="images/pic-work-03.jpg" alt="">
                     </div>
                     <div class="card-inner">
                       <h3 class="card-title"><a href="#">Personal Development</a></h3>
@@ -195,10 +192,10 @@
                 <img
                   sizes="(max-width: 3000px) 40vw, 1200px"
                   srcset="
-                  ../images/responsive/about-us_icoxoo_c_scale,w_380.jpg 380w,
-                  ../images/responsive/about-us_icoxoo_c_scale,w_853.jpg 853w,
-                  ../images/responsive/about-us_icoxoo_c_scale,w_1200.jpg 1200w"
-                  src="../images/responsive/about-us_icoxoo_c_scale,w_1200.jpg"
+                  images/responsive/about-us_icoxoo_c_scale,w_380.jpg 380w,
+                  images/responsive/about-us_icoxoo_c_scale,w_853.jpg 853w,
+                  images/responsive/about-us_icoxoo_c_scale,w_1200.jpg 1200w"
+                  src="images/responsive/about-us_icoxoo_c_scale,w_1200.jpg"
                   alt="">
               </div>
               <div class="col-1-2">
@@ -230,10 +227,10 @@
                     <img
                     sizes="(max-width: 2250px) 40vw, 900px"
                     srcset="
-                      ../images/responsive/pic-article-01_l2waac_c_scale,w_380.jpg 380w,
-                      ../images/responsive/pic-article-01_l2waac_c_scale,w_673.jpg 673w,
-                      ../images/responsive/pic-article-01_l2waac_c_scale,w_900.jpg 900w"
-                      src="../images/responsive/pic-article-01_l2waac_c_scale,w_900.jpg"
+                      images/responsive/pic-article-01_l2waac_c_scale,w_380.jpg 380w,
+                      images/responsive/pic-article-01_l2waac_c_scale,w_673.jpg 673w,
+                      images/responsive/pic-article-01_l2waac_c_scale,w_900.jpg 900w"
+                      src="images/responsive/pic-article-01_l2waac_c_scale,w_900.jpg"
                     alt="">
                   </div>
                   <p class="card-category">Career</p>
@@ -248,10 +245,10 @@
                     <img
                     sizes="(max-width: 2250px) 40vw, 900px"
                     srcset="
-                      ../images/responsive/pic-article-02_xe0wgi_c_scale,w_380.jpg 380w,
-                      ../images/responsive/pic-article-02_xe0wgi_c_scale,w_682.jpg 682w,
-                      ../images/responsive/pic-article-02_xe0wgi_c_scale,w_900.jpg 900w"
-                      src="../images/responsive/pic-article-02_xe0wgi_c_scale,w_900.jpg"
+                      images/responsive/pic-article-02_xe0wgi_c_scale,w_380.jpg 380w,
+                      images/responsive/pic-article-02_xe0wgi_c_scale,w_682.jpg 682w,
+                      images/responsive/pic-article-02_xe0wgi_c_scale,w_900.jpg 900w"
+                      src="images/responsive/pic-article-02_xe0wgi_c_scale,w_900.jpg"
                     alt="">
                   </div>
                   <p class="card-category">Digital Life</p>
@@ -266,10 +263,10 @@
                     <img
                     sizes="(max-width: 2250px) 40vw, 900px"
                     srcset="
-                      ../images/responsive/pic-article-03_hzlhrf_c_scale,w_380.jpg 380w,
-                      ../images/responsive/pic-article-03_hzlhrf_c_scale,w_679.jpg 679w,
-                      ../images/responsive/pic-article-03_hzlhrf_c_scale,w_900.jpg 900w"
-                    src="../images/responsive/pic-article-03_hzlhrf_c_scale,w_900.jpg"
+                      images/responsive/pic-article-03_hzlhrf_c_scale,w_380.jpg 380w,
+                      images/responsive/pic-article-03_hzlhrf_c_scale,w_679.jpg 679w,
+                      images/responsive/pic-article-03_hzlhrf_c_scale,w_900.jpg 900w"
+                    src="images/responsive/pic-article-03_hzlhrf_c_scale,w_900.jpg"
                     alt="">
                   </div>
                   <p class="card-category">Social</p>
@@ -293,7 +290,7 @@
             <ul class="row">
               <li class="col-1-3">
                 <article class="card-testimonial">
-                  <img src="../images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100" class="card-avatar">
+                  <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100" class="card-avatar">
                   <blockquote class="card-quote">
                     <p>I am completely blown away. Thanks to Techium, we’ve just launched our 5th website!
                       <cite>Yuri Y.</cite>
@@ -303,7 +300,7 @@
               </li>
               <li class="col-1-3">
                 <article class="card-testimonial">
-                  <img src="../images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100" class="card-avatar">
+                  <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100" class="card-avatar">
                   <blockquote class="card-quote">
                     <p>Thank you so much for your help. Techium company is awesome!
                       <cite>Dorrie S.</cite>
@@ -313,7 +310,7 @@
               </li>
               <li class="col-1-3">
                 <article class="card-testimonial">
-                  <img src="../images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100" class="card-avatar">
+                  <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100" class="card-avatar">
                   <blockquote class="card-quote">
                     <p>I love your system. Definitely worth the investment. I’d be lost without Techium company.
                       <cite>Sven H.</cite>
@@ -346,7 +343,7 @@
       <div  class="container">
         <div class="row">
           <div class="col-1-2">
-            <img src="../images/logo-white.png" alt="Techium logo" width="160" height="40">
+            <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
             <address class="footer-address">
               234 Washington Street<br>
               Urbana, Illinois
