--- a/form/04-article.html
+++ b/form/04-article.html
@@ -232,7 +232,7 @@ comment-section
                                             <div class="form-field">
                                                 <span class="form-field-container">
                                                     <textarea name="your-comment" id="your-comment" placeholder="Write your comment here"
-                                                    minlength="10" accesskey="c" columns="30" rows="6" required></textarea>
+                                                    minlength="10" accesskey="c" cols="30" rows="6" required></textarea>
                                                 </span>
                                             </div>
                                         </div>
