--- a/form/05-article.html
+++ b/form/05-article.html
@@ -227,8 +227,8 @@ comment-section
                                                     <input type="text" name="your-title" id="your-title"
                                                         placeholder="e.g. I loved that article" pattern="[A-Za-zÀ-ž\s]{4,}"
                                                         maxlength="75" autocomplete="on" accesskey="t" required>
-                                                        <i class="form-field-icon"></i><p class="form-help">Title should be at least 4 characters and only contains letters</p>
-                                                </span>
+                                                        <i class="form-field-icon"></i>
+                                                </span><p class="form-help">Title should be at least 4 characters and only contains letters</p>
                                             </div>
                                         </div>
                                         <div class="form-group col-2-3">
@@ -237,7 +237,7 @@ comment-section
                                                 <span class="form-field-container">
                                                     <textarea name="your-comment" id="your-comment" placeholder="Write your comment here"
                                                     minlength="10" accesskey="c" cols="30" rows="6" required></textarea>
-
+                                                    <i class="form-field-icon"></i>
                                                 </span><p class="form-help">Comment should be at least 10 characters</p>
                                             </div>
                                         </div>
