--- a/responsive_design/05-index.html
+++ b/responsive_design/05-index.html
@@ -19,8 +19,8 @@
             <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
           </a>
         </div>
-        <input class="menu-btn" type="checkbox" id="menu-btn" style="display:none;">
-          <label class="menu-icon" for="menu-btn">
+        <input class="menu-btn" type="checkbox" id="menu-btn">
+        <label class="menu-icon" for="menu-btn">
           <span class="navicon"></span>
         </label>
         <nav class="navbar-menu">
@@ -71,7 +71,7 @@
         <div class="container">
           <div class="section-body">
             <section class="section-inner">
-              <h2 class="section-title">We help you building your brand</h2>
+              <h2 class="section-title">We help you build your brand</h2>
               <a href="#" class="button">Get Started</a>
             </section>
           </div>
@@ -181,15 +181,14 @@
           <div class="section-body">
             <div class="row">
               <div class="col-1-2">
-                <img
+                <img 
                 sizes="(max-width: 3000px) 40vw, 1200px"
                 srcset="
-                ./images/about-us_icoxoo_c_scale,w_380.jpg 380w,
-                ./images/about-us_icoxoo_c_scale,w_853.jpg 856w,
-                ./images/about-us_icoxoo_c_scale,w_1200.jpg 1200w"
-                src="./images/about-us_icoxoo_c_scale,w_1200.jpg"
+                pic-about-01_ywo9vi_c_scale,w_380.jpg 380w,
+                pic-about-01_ywo9vi_c_scale,w_933.jpg 933w,
+                pic-about-01_ywo9vi_c_scale,w_1200.jpg 1200w"
+                src="pic-about-01_ywo9vi_c_scale,w_1200.jpg"
                 alt="">
-
               </div>
               <div class="col-1-2">
                 <h3>Who are we</h3>
@@ -218,12 +217,12 @@
                 <article class="card-blog">
                   <div>
                     <img
-                    sizes="(max-width: 2250px) 40vw, 900px"
+                    sizes="(max-width: 3000px) 40vw, 1200px"
                     srcset="
-                    ./images/pic-article-01_l2waac_c_scale,w_380.jpg 380w,
-                    ./images/pic-article-01_l2waac_c_scale,w_673.jpg 673w,
-                    ./images/pic-article-01_l2waac_c_scale,w_900.jpg 900w"
-                    src="./images/pic-article-01_l2waac_c_scale,w_900.jpg"
+                    pic-article-01_smkoja_c_scale,w_380.jpg 380w,
+                    pic-article-01_smkoja_c_scale,w_859.jpg 859w,
+                    pic-article-01_smkoja_c_scale,w_1200.jpg 1200w"
+                    src="pic-article-01_smkoja_c_scale,w_1200.jpg"
                     alt="">
                   </div>
                   <p class="card-category">Career</p>
@@ -236,12 +235,12 @@
                 <article class="card-blog">
                   <div>
                     <img
-                    sizes="(max-width: 2250px) 40vw, 900px"
+                    sizes="(max-width: 3000px) 40vw, 1200px"
                     srcset="
-                    ./images/pic-article-02_xe0wgi_c_scale,w_380.jpg 380w,
-                    ./images/pic-article-02_xe0wgi_c_scale,w_682.jpg 673w,
-                    ./images/pic-article-02_xe0wgi_c_scale,w_900.jpg 900w"
-                    src="./images/pic-article-02_xe0wgi_c_scale,w_900.jpg"
+                    pic-article-02_myparj_c_scale,w_380.jpg 380w,
+                    pic-article-02_myparj_c_scale,w_854.jpg 854w,
+                    pic-article-02_myparj_c_scale,w_1200.jpg 1200w"
+                    src="pic-article-02_myparj_c_scale,w_1200.jpg"
                     alt="">
                   </div>
                   <p class="card-category">Digital Life</p>
@@ -254,12 +253,12 @@
                 <article class="card-blog">
                   <div>
                     <img
-                    sizes="(max-width: 2250px) 40vw, 900px"
+                    sizes="(max-width: 3000px) 40vw, 1200px"
                     srcset="
-                    ./images/pic-article-03_hzlhrf_c_scale,w_380.jpg 380w,
-                    ./images/pic-article-03_hzlhrf_c_scale,w_679.jpg 673w,
-                    ./images/pic-article-03_hzlhrf_c_scale,w_900.jpg 900w"
-                    src="./images/pic-article-03_hzlhrf_c_scale,w_900.jpg"
+                    pic-article-03_w48m23_c_scale,w_380.jpg 380w,
+                    pic-article-03_w48m23_c_scale,w_883.jpg 883w,
+                    pic-article-03_w48m23_c_scale,w_1200.jpg 1200w"
+                    src="pic-article-03_w48m23_c_scale,w_1200.jpg"
                     alt="">
                   </div>
                   <p class="card-category">Social</p>
